done config file need to start parser

--- a/config/webserv.conf
+++ b/config/webserv.conf
@@ -1,9 +1,45 @@
+### info ###
 # comments are allowed only here.
-# error_page N /path/to/page -> almost like nginx but not quite
-# in location blocks: redirect /etc/html/index.html -> like return 301 /etc/html/index.html in nginx
-
+# cgi is executed if request points to valid .py file
+# global scope config is not allowed (because I'm lazy)
+# each statement must be followed by a ';' (like in C)
+# supported error_pages: 401, 403, 404, 405, 502 will default to webserv_path/error_pages/N.html
+### server scope ###
+# error_page N /path/to/page -> almost like nginx but not quite (path must be absolute or relative to webserv executable)
+# server_name coucou.com -> like in nginx MANDATORY
+# listen 80 -> like in nginx MANDATORY
+# client_max_body_size 80 -> like in nginx but unit is byte only 500 by default
+### location scope ###
+# index index.html -> like in nginx but only one file allowed
+# root / location -> like in nginx but no regex
+# autoindex on -> like in nginx (off by default)
+# index is mandatory if no autoindex on and no redirect
+# use GET -> allows get nethod (only GET DELETE and POST are supported)
+# redirect http://google.com -> like return 301 http://google.com in nginx
+###
 
 server {
+	server_name banana.com;
+	listen 4242;
 	error_page 404 /path/to/page/404.html;
-	
+	client_max_body_size 666;
+
+	location /awesome_site
+	{
+		use GET; use DELETE; use POST;
+		redirect https://www.youtube.com/watch?v=PdUSXvPdKM4;
+	}
+
+	location /
+	{
+		root /var/log/;
+		use GET;
+		autoindex on;
+	}
+
+	location /execute/ {
+		use GET;
+		use POST;
+		index home_page.html;
+	}
 }
