edited config. needs re-checking

--- a/config/webserv.conf
+++ b/config/webserv.conf
@@ -4,6 +4,7 @@
 # global scope config is not allowed (because I'm lazy)
 # each statement must be followed by a ';' (like in C)
 # supported error_pages: 401, 403, 404, 405, 502 will default to webserv_path/error_pages/N.html
+# first server that appears for a port is the default server for that port
 ### server scope ###
 # error_page N /path/to/page -> almost like nginx but not quite (path must be absolute or relative to webserv executable)
 # server_name coucou.com -> like in nginx MANDATORY
@@ -13,8 +14,7 @@
 # index index.html -> like in nginx but only one file allowed
 # root / location -> like in nginx but no regex
 # autoindex on -> like in nginx (off by default)
-# index is mandatory if no autoindex on and no redirect
-# use GET -> allows get nethod (only GET DELETE and POST are supported)
+# use GET -> allows get method (only GET DELETE and POST are supported)
 # redirect http://google.com -> like return 301 http://google.com in nginx
 ###
 
@@ -40,6 +40,12 @@ server {
 	location /execute/ {
 		use GET;
 		use POST;
-		index home_page.html;
+		root /var/ok/mec/cgi-bin/;
+	}
+
+	location /display/
+	{
+		root /my/files;
+		index page.html;
 	}
 }
