--- a/config/default.conf
+++ b/config/default.conf
@@ -6,10 +6,10 @@
 # supported error_pages: 401, 403, 404, 405, 502 will default to webserv_path/error_pages/N.html
 # first server that appears for a port is the default server for that port
 ### server scope ###
-# error_page N /path/to/page -> almost like nginx but not quite (path must be absolute or relative to webserv executable)
+# error_page N /path/to/page -> almost like nginx
 # server_name coucou.com -> like in nginx MANDATORY
 # listen 80 -> like in nginx MANDATORY
-# client_max_body_size 80 -> like in nginx but unit is byte only 500 by default
+# client_max_body_size 80 -> like in nginx but unit is byte only. 500 by default
 ### location scope ###
 # index index.html -> like in nginx but only one file allowed
 # root / location -> like in nginx but no regex
@@ -17,6 +17,11 @@
 # use GET -> allows get method (only GET DELETE and POST are supported)
 # redirect http://google.com -> like return 301 http://google.com in nginx
 ###
+
+
+ATTENTION tu dois aussi faire ca:
+Make the route able to accept uploaded files and configure where they should
+be saved. (dans le location scope)
 
 server {
 	server_name banana.com;
