done config syntax. Ready to kick some butts on the parsing

--- a/config/default.conf
+++ b/config/default.conf
@@ -14,14 +14,10 @@
 # index index.html -> like in nginx but only one file allowed
 # root / location -> like in nginx but no regex
 # autoindex on -> like in nginx (off by default)
-# use GET -> allows get method (only GET DELETE and POST are supported)
+# use GET -> allows GET method (only GET DELETE and POST are supported)
 # redirect http://google.com -> like return 301 http://google.com in nginx
+# upload_pass /path/to/store/posted/files -> enables file upload and sets file upload directory
 ###
-
-
-ATTENTION tu dois aussi faire ca:
-Make the route able to accept uploaded files and configure where they should
-be saved. (dans le location scope)
 
 server {
 	server_name banana.com;
@@ -47,6 +43,8 @@ server {
 		use POST;
 		root /var/ok/mec/cgi-bin/;
 	}
+
+	location /to/store/ { use POST; upload_pass /tmp; }
 
 	location /display/
 	{
