--- a/config/Makefile
+++ b/config/Makefile
@@ -1,5 +1,5 @@
 CC=c++
-CFLAGS=-Wall -Wextra -Werror -std=c++98 -g
+CFLAGS=-Wall -Wextra -Werror -std=c++98 -g -DDEBUG
 
 all: $(NAME)
 	$(CC) $(CFLAGS) *.cpp -o a.out
