valentine is here

--- a/config/default.conf
+++ b/config/default.conf
@@ -28,7 +28,7 @@ server {
 	location /awesome_site
 	{
 		use GET; use DELETE; use POST;
-		redirect https://www.youtube.com/watch?v=PdUSXvPdKM4;
+		redirect https://tenor.com/view/among-us-twerk-thicc-among-us-twerk-funny-among-us-gif-20511920;
 	}
 
 	location /
@@ -52,3 +52,4 @@ server {
 		index page.html;
 	}
 }
+
