--- a/config/default.conf
+++ b/config/default.conf
@@ -44,6 +44,7 @@ server {
 	}
 
 	location /to/store/ { use POST; upload_pass /tmp; }
+	location /to/store/ { use POST; upload_pass /tmp; }
 
 	location /display/
 	{
