commit b4 big change

--- a/default.conf
+++ b/default.conf
@@ -43,7 +43,10 @@ server {
 		root /var/ok/mec/cgi-bin/;
 	}
 
-	location /to/store/ { use POST; upload_pass /tmp; }
+	location /to/store/ {
+		use POST;
+		upload_pass /tmp;
+		}
 
 	location /display/
 	{
