--- a/default.conf
+++ b/default.conf
@@ -24,7 +24,7 @@ server {
 	error_page 404 server_files/404.html;
 	client_max_body_size 666;
 
-	location /awesome_site
+	location /awesome_site/
 	{
 		use GET; use DELETE; use POST;
 		redirect https://tenor.com/view/among-us-twerk-thicc-among-us-twerk-funny-among-us-gif-20511920;
@@ -44,9 +44,8 @@ server {
 	}
 
 	location /to/store/ { use POST; upload_pass /tmp; }
-	location /to/store/ { use POST; upload_pass /tmp; }
 
-	location /display/
+	location /display
 	{
 		root /my/files;
 		index page.html;
