root/location correctly change uri

--- a/default.conf
+++ b/default.conf
@@ -32,7 +32,7 @@ server {
 
 	location /
 	{
-		root /var/log/;
+		root ./server_files/;
 		use GET;
 		autoindex on;
 	}
@@ -105,7 +105,7 @@ server {
 
 	location /
 	{
-		root /var/log/;
+		root ./server_files;
 		use GET;
 		autoindex on;
 	}
