--- a/default.conf
+++ b/default.conf
@@ -34,7 +34,8 @@ server {
 	{
 		root ./server_files/;
 		use GET;
-		index index.html
+		index index.html;
+		autoindex off;
 	}
 
 	location /execute/ {
