upload config for test

--- a/default.conf
+++ b/default.conf
@@ -54,5 +54,11 @@ server {
 		root /my/files;
 		index page.html;
 	}
+	location /upload/ {
+		use GET; use POST; use DELETE;
+		upload_pass /tmp;
+		index test.html;
+		root ./server_files
+	}
 }
 
