--- a/default.conf
+++ b/default.conf
@@ -34,8 +34,7 @@ server {
 	{
 		root ./server_files/;
 		use GET;
-		index index.html;
-		autoindex off;
+		autoindex on;
 	}
 
 	location /execute/ {
