--- a/default.conf
+++ b/default.conf
@@ -21,7 +21,7 @@
 server {
 	server_name banana.com;
 	listen 4242;
-	error_page 404 server_files/404.html;
+	error_page 404 server_files/error_pages/404.html;
 	client_max_body_size 666;
 
 	location /awesome_site/
