--- a/default.conf
+++ b/default.conf
@@ -40,50 +40,7 @@ server {
 	location /execute/ {
 		use GET;
 		use POST;
-		root /var/ok/mec/cgi-bin/;
-	}
-
-	location /to/store/ {
-		use POST;
-		upload_pass /tmp;
-		}
-
-	location /display/
-	{
-		root /my/files;
-		index page.html;
-	}
-	location /upload/ {
-		use GET; use POST; use DELETE;
-		upload_pass /tmp;
-		index test.html;
-		root ./server_files
-	}
-}
-
-server {
-	server_name tomato.com;
-	listen 4242;
-	error_page 404 server_files/error_pages/404.html;
-	client_max_body_size 666;
-
-	location /awesome_site/
-	{
-		use GET; use DELETE; use POST;
-		redirect https://tenor.com/view/among-us-twerk-thicc-among-us-twerk-funny-among-us-gif-20511920;
-	}
-
-	location /
-	{
-		root ./server_files/;
-		use GET;
-		autoindex on;
-	}
-
-	location /execute/ {
-		use GET;
-		use POST;
-		root /var/ok/mec/cgi-bin/;
+		root ./cgi-bin/;
 	}
 
 	location /to/store/ {
