upload_pass is always empty in execute_cgi...

--- a/default.conf
+++ b/default.conf
@@ -56,7 +56,7 @@ server {
 	location /upload/ {
 		use GET; use POST; use DELETE;
 		upload_pass /tmp;
-		index test.html;
+		index upload.html;
 		root ./server_files
 	}
 }
