--- a/default.conf
+++ b/default.conf
@@ -34,6 +34,8 @@ server {
 	{
 		root ./;
 		use GET;
+		use POST;
+		upload_pass /server_files;
 		autoindex on;
 	}
 
@@ -43,16 +45,18 @@ server {
 		root ./cgi-bin/;
 	}
 
-	location /to/store/ {
+	location /to/store/
+	{
 		use POST;
 		upload_pass /tmp;
-		}
+	}
 
 	location /display/
 	{
 		root /my/files;
 		index page.html;
 	}
+
 	location /upload/ {
 		use GET; use POST; use DELETE;
 		upload_pass /tmp;
