sill has a few bugs but it's cool

--- a/default2.conf
+++ b/default2.conf
@@ -1,24 +1,23 @@
 server {
 	server_name banana.com;
 	listen 4242;
-
+	client_max_body_size 700;
 	location /
 	{
-		root ./server_files;
-		use GET;
-		autoindex on;
+		root /tmp;
+		use GET; use POST; use DELETE;
+		index index.html;
 	}
 
 	location /execute/ {
 		use GET;
 		use POST;
-		root ./cgi-bin/;
+		root ./cgi-bin;
 		upload_pass /tmp;
 	}
 
 	location /upload/ {
 		use GET; use POST; use DELETE;
-		upload_pass /tmp;
 		index upload.html;
 		root ./server_files
 	}
