--- a/default2.conf
+++ b/default2.conf
@@ -4,7 +4,7 @@ server {
 	client_max_body_size 700;
 	location /
 	{
-		root /tmp;
+		root ./server_files;
 		use GET; use POST; use DELETE;
 		index index.html;
 	}
@@ -13,7 +13,7 @@ server {
 		use GET;
 		use POST;
 		root ./cgi-bin;
-		upload_pass /tmp;
+		upload_pass ./server_files;
 	}
 
 	location /upload/ {
