tested edge case

--- a/default2.conf
+++ b/default2.conf
@@ -13,7 +13,7 @@ server {
 		use GET;
 		use POST;
 		root ./cgi-bin;
-		upload_pass ./server_files;
+		upload_pass server_files;
 	}
 
 	location /upload/ {
